--- a/index.html
+++ b/index.html
@@ -285,152 +285,42 @@
             <div class="uk-slider-container" uk-slider>
 
               <div class="uk-position-relative uk-visible-toggle" tabindex="-1">
+                <main>
 
-                <ul class="uk-slider-items uk-child-width-1-2@s uk-grid">
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/shwetank.jpg" alt="chairperson" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Shwetank</h3>
-                        <p>Chairperson</p>
-                      </div>
-                    </div>
-                  </li>
+                  <div class="image-card" style="background-image: url('src/post/shwetank.jpg')">
+                  </div>
 
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/priyanjali.jpg" alt="vice-chairperson" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Priyanjali</h3>
-                        <p>Vice Chairperson</p>
-                      </div>
-                    </div>
-                  </li>
+                  <div class="image-card" style="background-image: url('src/post/priyanjali.jpg')">
+                  </div>
 
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/ishaan.jpg" alt="organising-secretary" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Ishaan</h3>
-                        <p>Organising Secretary</p>
-                      </div>
-                    </div>
-                  </li>
+                  <div class="image-card" style="background-image: url('src/post/ishaan.jpg')">
+                  </div>
 
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/ayush.jpg" alt="treasurer" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Ayush</h3>
-                        <p>Treasurer</p>
-                      </div>
-                    </div>
-                  </li>
+                  <div class="image-card" style="background-image: url('src/post/ayush.jpg')">
+                  </div>
+                  <div class="image-card" style="background-image: url('src/post/suraj.jpg')">
+                  </div>
 
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/akshat.jpg" alt="management-head" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Akshat</h3>
-                        <p>Management Head</p>
-                      </div>
-                    </div>
-                  </li>
+                  <div class="image-card" style="background-image: url('src/post/tanya.jpg')">
+                  </div>
 
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/radhika.jpeg" alt="wie-management-head" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Radhika</h3>
-                        <p>WIE Management Head</p>
-                      </div>
-                    </div>
-                  </li>
+                  <div class="image-card" style="background-image: url('src/post/kartikey.jpg')">
+                  </div>
 
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/suraj.jpg" alt="technical-head" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Suraj</h3>
-                        <p>Technical CSE Head</p>
-                      </div>
-                    </div>
-                  </li>
+                  <div class="image-card" style="background-image: url('src/post/somya.jpg')">
+                  </div>
+                  <div class="image-card" style="background-image: url('src/post/akshat.jpg')">
+                  </div>
 
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/tanya.jpg" alt="technical-ece-head" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Tanya</h3>
-                        <p>Technical ECE Head</p>
-                      </div>
-                    </div>
-                  </li>
+                  <div class="image-card" style="background-image: url('src/post/manan.jpeg')">
+                  </div>
 
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/aditya.jpg" alt="digital-head" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Aditya</h3>
-                        <p>Digital Head</p>
-                      </div>
-                    </div>
-                  </li>
+                  <div class="image-card" style="background-image: url('src/post/aditya.jpg')">
+                  </div>
 
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/somya.jpg" alt="marketing-head" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Somya</h3>
-                        <p>Marketing Head</p>
-                      </div>
-                    </div>
-                  </li>
-
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/manan.jpeg" alt="creative-head" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Manan</h3>
-                        <p>Creative Head</p>
-                      </div>
-                    </div>
-                  </li>
-
-                  <li>
-                    <div class="uk-card uk-card-default">
-                      <div class="uk-card-media-top">
-                        <img src="src/post/kartikey.jpg" alt="public-relation-head" class="team-members">
-                      </div>
-                      <div class="uk-card-body">
-                        <h3 class="uk-card-title team-name">Kartikey</h3>
-                        <p>Public Relation Head</p>
-                      </div>
-                    </div>
-                  </li>
-                </ul>
+                  <div class="image-card" style="background-image: url('src/post/radhika.jpeg')">
+                  </div>
+                </main>
               </div>
               <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
                 uk-slider-item="previous"></a>
@@ -457,7 +347,7 @@
   <!--Contact section ends-->
 
   <!--footer-->
-  <footer class="footer">
+  <footer class="footer uk-position-relative" uk-scrollspy="cls:uk-animation-fade">
     <div class="waves">
       <div class="wave" id="wave1"></div>
       <div class="wave" id="wave2"></div>
