--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="js/main.js"></script>
+  
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -273,18 +273,18 @@
     <!--Timeline section ends -->
 
     <!--Team section begins-->
-    <div class="uk-position-relative" id="team" uk-scrollspy="cls:uk-animation-fade">
-      <div class="uk-section">
+    <div class="uk-position-relative teamh"  >
+      <!-- <div >
         <div class="uk-container">
-          <div class="uk-position-top-center">
-            <div class="uk-tile uk-tile-transparent">
+       
+          </div>
+          <div>
+            <div>
+
+              <div > -->
+            <div style="text-align: center; margin-top: 10px;">
               <span class="sectionHead">Team</span>
             </div>
-          </div>
-          <div class="uk-position-center" id="team-slider">
-            <div class="uk-slider-container" uk-slider>
-
-              <div class="uk-position-relative uk-visible-toggle" tabindex="-1">
                 <main>
 
                   <div class="image-card" style="background-image: url('src/post/shwetank.jpg')">
@@ -321,7 +321,7 @@
                   <div class="image-card" style="background-image: url('src/post/radhika.jpeg')">
                   </div>
                 </main>
-              </div>
+              <!-- </div>
               <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
                 uk-slider-item="previous"></a>
               <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
@@ -333,106 +333,106 @@
 
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
-  </div>
-  <!--Team section ends-->
 
-  <!--Sponsor section begins-->
+    <!--Team section ends-->
 
-  <!--Sponsor section ends-->
+    <!--Sponsor section begins-->
 
-  <!--Contact section begins-->
+    <!--Sponsor section ends-->
 
-  <!--Contact section ends-->
+    <!--Contact section begins-->
 
-  <!--footer-->
-  <footer class="footer uk-position-relative" uk-scrollspy="cls:uk-animation-fade">
-    <div class="waves">
-      <div class="wave" id="wave1"></div>
-      <div class="wave" id="wave2"></div>
-      <div class="wave" id="wave3"></div>
-      <div class="wave" id="wave4"></div>
-    </div>
-    <div class="footer-content">
-      <div class="footer-section about">
-        <h1 class="glitch" data-text="REACH US AT">REACH US AT</h1>
-        <h3>Xenith 2021<br>
-          Jaypee Institute Of Information<br>
-          Technology<br> Sector-62, Noida,<br>India
-        </h3>
+    <!--Contact section ends-->
 
-
+    <!--footer-->
+    <footer class="footer uk-position-relative" uk-scrollspy="cls:uk-animation-fade">
+      <div class="waves">
+        <div class="wave" id="wave1"></div>
+        <div class="wave" id="wave2"></div>
+        <div class="wave" id="wave3"></div>
+        <div class="wave" id="wave4"></div>
       </div>
+      <div class="footer-content">
+        <div class="footer-section about">
+          <h1 class="glitch" data-text="REACH US AT">REACH US AT</h1>
+          <h3>Xenith 2021<br>
+            Jaypee Institute Of Information<br>
+            Technology<br> Sector-62, Noida,<br>India
+          </h3>
 
-      <div class="footer-section links">
-        <h1 class="glitch" data-text="QUICK LINKS">QUICK LINKS</h1>
 
-        <ul class="footer-list">
-          <a href="#" class="contentfooter">
-            <li>About</li>
-          </a>
-          <a href="#" class="contentfooter">
-            <li>Events</li>
-          </a>
-          <a href="#" class="contentfooter">
-            <li>Timeline</li>
-          </a>
-          <a href="#" class="contentfooter">
-            <li>Team</li>
-          </a>
-          <a href="#" class="contentfooter">
-            <li>Sponsers</li>
-          </a>
-        </ul>
-      </div>
-
-      <div class="footer-section contact-form">
-        <h1 class="glitch" data-text="CONTACT US">CONTACT US</h1>
-        <div class="btn ph-btn" style="float: left;;">
-          <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
         </div>
-        <h3>Shwetank : +919852244157<br><br>
+
+        <div class="footer-section links">
+          <h1 class="glitch" data-text="QUICK LINKS">QUICK LINKS</h1>
+
+          <ul class="footer-list">
+            <a href="#" class="contentfooter">
+              <li>About</li>
+            </a>
+            <a href="#" class="contentfooter">
+              <li>Events</li>
+            </a>
+            <a href="#" class="contentfooter">
+              <li>Timeline</li>
+            </a>
+            <a href="#" class="contentfooter">
+              <li>Team</li>
+            </a>
+            <a href="#" class="contentfooter">
+              <li>Sponsers</li>
+            </a>
+          </ul>
+        </div>
+
+        <div class="footer-section contact-form">
+          <h1 class="glitch" data-text="CONTACT US">CONTACT US</h1>
           <div class="btn ph-btn" style="float: left;;">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
-          </div>Priyanjali : +91 7983760053
-        </h3>
-        <br>
-
-      </div>
-
-    </div>
-    <div class="footer-bottom">
-      <div class="socials">
-        <div class="foot-follow">
-          <div class="glitch" data-text="FOLLOW US ON">FOLLOW US ON</div>
-        </div>
-
-        <div class="container">
-          <div class="btn fb-btn">
-            <i class="fa fa-facebook" aria-hidden="true" id="fb"></i>
           </div>
-          <div class="btn ig-btn">
-            <i class="fa fa-instagram" aria-hidden="true" id="ig"></i>
-          </div>
-          <div class="btn ln-btn">
-            <i class="fa fa-linkedin" aria-hidden="true" id="ln"></i>
-          </div>
-          <div class="btn gt-btn">
-            <i class="fa fa-github" aria-hidden="true" id="gt"></i>
-          </div>
-          <div class="btn yt-btn">
-            <i class="fa fa-youtube-play" aria-hidden="true" id="yt"></i>
-          </div>
+          <h3>Shwetank : +919852244157<br><br>
+            <div class="btn ph-btn" style="float: left;;">
+              <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
+            </div>Priyanjali : +91 7983760053
+          </h3>
+          <br>
 
         </div>
-      </div>
-    </div>
-  </footer>
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-  <!--/footer-->
+      </div>
+      <div class="footer-bottom">
+        <div class="socials">
+          <div class="foot-follow">
+            <div class="glitch" data-text="FOLLOW US ON">FOLLOW US ON</div>
+          </div>
+
+          <div class="container">
+            <div class="btn fb-btn">
+              <i class="fa fa-facebook" aria-hidden="true" id="fb"></i>
+            </div>
+            <div class="btn ig-btn">
+              <i class="fa fa-instagram" aria-hidden="true" id="ig"></i>
+            </div>
+            <div class="btn ln-btn">
+              <i class="fa fa-linkedin" aria-hidden="true" id="ln"></i>
+            </div>
+            <div class="btn gt-btn">
+              <i class="fa fa-github" aria-hidden="true" id="gt"></i>
+            </div>
+            <div class="btn yt-btn">
+              <i class="fa fa-youtube-play" aria-hidden="true" id="yt"></i>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="js/main.js"></script>
+    <!--/footer-->
 
   </div>
 </body>
