Footer section added

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     <!--Contact section ends-->
 
     <!--footer-->
-    <footer class="footer uk-position-relative" uk-scrollspy="cls:uk-animation-fade">
+    <footer class="footer uk-position-relative" uk-scrollspy="cls:uk-animation-fade" id="contact">
       <div class="waves">
         <div class="wave" id="wave1"></div>
         <div class="wave" id="wave2"></div>
