--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/js/uikit-icons.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  
+
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -273,7 +273,7 @@
     <!--Timeline section ends -->
 
     <!--Team section begins-->
-    <div class="uk-position-relative teamh"  >
+    <div class="uk-position-relative teamh">
       <!-- <div >
         <div class="uk-container">
        
@@ -282,46 +282,119 @@
             <div>
 
               <div > -->
-            <div style="text-align: center; margin-top: 10px;">
-              <span class="sectionHead">Team</span>
-            </div>
-                <main>
+      <div style="text-align: center; margin-top: 10px;">
+        <span class="sectionHead">Team</span>
+      </div>
+      <main>
 
-                  <div class="image-card" style="background-image: url('src/post/shwetank.jpg')">
-                  </div>
+        <div class="image-card" style="background-image: url('src/post/shwetank.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Shwetank</h2><br>
+            <h3>Chairperson</h3>
+          </div>
 
-                  <div class="image-card" style="background-image: url('src/post/priyanjali.jpg')">
-                  </div>
+        </div>
 
-                  <div class="image-card" style="background-image: url('src/post/ishaan.jpg')">
-                  </div>
+        <div class="image-card" style="background-image: url('src/post/priyanjali.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Priyanjali</h2><br>
+            <h3>Vice Chairperson</h3>
+          </div>
+        </div>
 
-                  <div class="image-card" style="background-image: url('src/post/ayush.jpg')">
-                  </div>
-                  <div class="image-card" style="background-image: url('src/post/suraj.jpg')">
-                  </div>
+        <div class="image-card" style="background-image: url('src/post/ishaan.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Ishaan</h2><br>
+            <h3>Organising Secretary</h3>
+          </div>
+        </div>
 
-                  <div class="image-card" style="background-image: url('src/post/tanya.jpg')">
-                  </div>
+        <div class="image-card" style="background-image: url('src/post/ayush.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Ayush</h2><br>
+            <h3>Treasurer</h3>
+          </div>
+        </div>
+        <div class="image-card" style="background-image: url('src/post/suraj.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Suraj</h2><br>
+            <h3>Technical Head Cse</h3>
+          </div>
+        </div>
 
-                  <div class="image-card" style="background-image: url('src/post/kartikey.jpg')">
-                  </div>
+        <div class="image-card" style="background-image: url('src/post/tanya.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Tanya</h2><br>
+            <h3>Technical Head Ece</h3>
+          </div>
+        </div>
 
-                  <div class="image-card" style="background-image: url('src/post/somya.jpg')">
-                  </div>
-                  <div class="image-card" style="background-image: url('src/post/akshat.jpg')">
-                  </div>
+        <div class="image-card" style="background-image: url('src/post/kartikey.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Kartikey</h2><br>
+            <h3>Public Relations Head</h3>
+          </div>
+        </div>
 
-                  <div class="image-card" style="background-image: url('src/post/manan.jpeg')">
-                  </div>
+        <div class="image-card" style="background-image: url('src/post/somya.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Somya</h2><br>
+            <h3>Marketing Head</h3>
+          </div>
+        </div>
+        <div class="image-card" style="background-image: url('src/post/akshat.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Akshat</h2><br>
+            <h3>Management Head</h3>
+          </div>
+        </div>
 
-                  <div class="image-card" style="background-image: url('src/post/aditya.jpg')">
-                  </div>
+        <div class="image-card" style="background-image: url('src/post/manan.jpeg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Manan</h2><br>
+            <h3>Creative Head</h3>
+          </div>
+        </div>
 
-                  <div class="image-card" style="background-image: url('src/post/radhika.jpeg')">
-                  </div>
-                </main>
-              <!-- </div>
+        <div class="image-card" style="background-image: url('src/post/aditya.jpg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Aditya</h2><br>
+            <h3>Digital Head</h3>
+          </div>
+        </div>
+
+        <div class="image-card" style="background-image: url('src/post/radhika.jpeg')">
+          <div class="caption"></div>
+          <div class="content">
+            <br><br><br>
+            <h2>Radhika</h2><br>
+            <h3>WIE Management Head</h3>
+          </div>
+        </div>
+      </main>
+      <!-- </div>
               <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
                 uk-slider-item="previous"></a>
               <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
