--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="uk-container">
           <div class="uk-position-top-center">
             <div class="uk-tile uk-tile-default">
-              <span class="sectionHead">About</span>
+              <h1 class="sectionHead glitch final" data-text="About">About</h1>
             </div>
           </div>
           <div class="uk-position-center">
@@ -131,7 +131,7 @@
         <div class="uk-container">
           <div class="uk-position-top-center">
             <div class="uk-tile uk-tile-default" style="background-color: transparent;">
-              <span class="sectionHead">Events</span>
+              <h1 class="sectionHead glitch final" data-text="Events">Events</h1>
             </div>
           </div>
           <div class="uk-position-center">
@@ -236,7 +236,7 @@
         <div class="uk-container">
           <div class="uk-position-top-center">
             <div class="uk-tile uk-tile-transparent">
-              <span class="sectionHead">Timeline</span>
+              <h1 class="sectionHead glitch final" data-text="Timeline">Timeline</h1>
             </div>
           </div>
           <div class="timeline">
@@ -282,8 +282,10 @@
             <div>
 
               <div > -->
-      <div style="text-align: center; margin-top: 10px;">
-        <span class="sectionHead">Team</span>
+      <div class="uk-position-top-center">
+        <div class="uk-tile uk-tile-transparent">
+          <h1 class="sectionHead glitch final" data-text="Team">Team</h1>
+        </div>
       </div>
       <main>
 
