--- a/index.html
+++ b/index.html
@@ -127,98 +127,105 @@
     <!--Event section begins-->
 
     <div class="uk-position-relative" id="event" uk-scrollspy="cls:uk-animation-fade">
-      <div class="uk-section">
-        <div class="uk-container">
-          <div class="uk-position-top-center">
-            <div class="uk-tile uk-tile-default" style="background-color: transparent;">
-              <h1 class="sectionHead glitch final" data-text="Events">Events</h1>
+      <div class="uk-section parasllax">
+        <div id="universe" style=" background: rgb(9, 9, 48)
+        repeat fixed 100%;height: 1000px;">
+          <div id="stars"></div>
+          <div id="stars2"></div>
+          <div id="stars3"></div>
+
+          <div class="uk-container">
+            <div class="uk-position-top-center">
+              <div class="uk-tile uk-tile-default" style="background-color: transparent;">
+                <h1 class="sectionHead glitch final" data-text="Events">Events</h1>
+              </div>
             </div>
-          </div>
-          <div class="uk-position-center">
-            <div class="
+            <div class="uk-position-center">
+              <div class="
                   uk-child-width-1-3@m uk-grid-small uk-grid-match
                   event-card
                 " uk-grid>
-              <div>
-                <div class="uk-card uk-card-hover uk-card-default uk-card-body">
-                  <h3 class="uk-card-title team-name">Default</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  </p>
+                <div>
+                  <div class="uk-card uk-card-hover uk-card-default uk-card-body">
+                    <h3 class="uk-card-title team-name">Default</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                  </div>
+                </div>
+                <div>
+                  <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
+                    <h3 class="uk-card-title team-name">Primary</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                  </div>
+                </div>
+                <div>
+                  <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
+                    <h3 class="uk-card-title team-name">Secondary</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                  </div>
                 </div>
               </div>
-              <div>
-                <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
-                  <h3 class="uk-card-title team-name">Primary</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  </p>
-                </div>
-              </div>
-              <div>
-                <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
-                  <h3 class="uk-card-title team-name">Secondary</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="
+              <div class="
                   uk-child-width-1-3@m uk-grid-small uk-grid-match
                   event-card
                 " uk-grid>
-              <div>
-                <div class="uk-card uk-card-hover uk-card-default uk-card-body">
-                  <h3 class="uk-card-title team-name">Default</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  </p>
+                <div>
+                  <div class="uk-card uk-card-hover uk-card-default uk-card-body">
+                    <h3 class="uk-card-title team-name">Default</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                  </div>
+                </div>
+                <div>
+                  <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
+                    <h3 class="uk-card-title team-name">Primary</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                  </div>
+                </div>
+                <div>
+                  <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
+                    <h3 class="uk-card-title team-name">Secondary</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                  </div>
                 </div>
               </div>
-              <div>
-                <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
-                  <h3 class="uk-card-title team-name">Primary</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  </p>
-                </div>
-              </div>
-              <div>
-                <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
-                  <h3 class="uk-card-title team-name">Secondary</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="
+              <div class="
                   uk-child-width-1-3@m uk-grid-small uk-grid-match
                   event-card
                 " uk-grid>
-              <div>
-                <div class="uk-card uk-card-hover uk-card-default uk-card-body">
-                  <h3 class="uk-card-title team-name">Default</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  </p>
+                <div>
+                  <div class="uk-card uk-card-hover uk-card-default uk-card-body">
+                    <h3 class="uk-card-title team-name">Default</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div>
-                <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
-                  <h3 class="uk-card-title team-name">Primary</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  </p>
+                <div>
+                  <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
+                    <h3 class="uk-card-title team-name">Primary</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div>
-                <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
-                  <h3 class="uk-card-title team-name">Secondary</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  </p>
+                <div>
+                  <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
+                    <h3 class="uk-card-title team-name">Secondary</h3>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
