--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="uk-position-relative" id="event" uk-scrollspy="cls:uk-animation-fade">
       <div class="uk-section parasllax">
         <div id="universe" style=" background: rgb(9, 9, 48)
-        repeat fixed 100%;height: 1000px;">
+        repeat fixed 100%;">
           <div id="stars"></div>
           <div id="stars2"></div>
           <div id="stars3"></div>
