--- a/index.html
+++ b/index.html
@@ -140,93 +140,53 @@
                 <h1 class="sectionHead glitch final" data-text="Events">Events</h1>
               </div>
             </div>
-            <div class="uk-position-center">
-              <div class="
-                  uk-child-width-1-3@m uk-grid-small uk-grid-match
-                  event-card
-                " uk-grid>
-                <div>
-                  <div class="uk-card uk-card-hover uk-card-default uk-card-body">
-                    <h3 class="uk-card-title team-name">Default</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
+            <div class="full">
+              <div class="blog-slider">
+                <div class="blog-slider__wrp swiper-wrapper">
+                  <div class="blog-slider__item swiper-slide">
+                    <div class="blog-slider__img">
+
+                      <img
+                        src="https://images.pexels.com/photos/3420174/pexels-photo-3420174.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                        alt="Gifts">
+                    </div>
+                    <div class="blog-slider__content">
+                      <div class="blog-slider__title">Buy Christmas gifts
+                      </div>
+                      <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Recusandae voluptate repellendus magni illo ea animi? </div>
+                      <a href="#" class="blog-slider__button">SHOP</a>
+                    </div>
                   </div>
-                </div>
-                <div>
-                  <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
-                    <h3 class="uk-card-title team-name">Primary</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
+                  <div class="blog-slider__item swiper-slide">
+                    <div class="blog-slider__img">
+                      <img
+                        src="https://images.pexels.com/photos/6141236/pexels-photo-6141236.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                        alt="Xmas tree">
+                    </div>
+                    <div class="blog-slider__content">
+                      <div class="blog-slider__title">Enjoy Christmas with your children</div>
+                      <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Recusandae voluptate repellendus magni illo ea animi?</div>
+                      <a href="#" class="blog-slider__button">READ MORE</a>
+                    </div>
                   </div>
-                </div>
-                <div>
-                  <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
-                    <h3 class="uk-card-title team-name">Secondary</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
+
+                  <div class="blog-slider__item swiper-slide">
+                    <div class="blog-slider__img">
+                      <img
+                        src="https://images.pexels.com/photos/790916/pexels-photo-790916.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                        alt="Xmas firework">
+                    </div>
+                    <div class="blog-slider__content">
+                      <div class="blog-slider__title">Don't forget the fireworks</div>
+                      <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Recusandae voluptate repellendus magni illo ea animi?</div>
+                    </div>
                   </div>
+
                 </div>
-              </div>
-              <div class="
-                  uk-child-width-1-3@m uk-grid-small uk-grid-match
-                  event-card
-                " uk-grid>
-                <div>
-                  <div class="uk-card uk-card-hover uk-card-default uk-card-body">
-                    <h3 class="uk-card-title team-name">Default</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                  </div>
-                </div>
-                <div>
-                  <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
-                    <h3 class="uk-card-title team-name">Primary</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                  </div>
-                </div>
-                <div>
-                  <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
-                    <h3 class="uk-card-title team-name">Secondary</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="
-                  uk-child-width-1-3@m uk-grid-small uk-grid-match
-                  event-card
-                " uk-grid>
-                <div>
-                  <div class="uk-card uk-card-hover uk-card-default uk-card-body">
-                    <h3 class="uk-card-title team-name">Default</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                  </div>
-                </div>
-                <div>
-                  <div class="uk-card uk-card-hover uk-card-primary uk-card-body">
-                    <h3 class="uk-card-title team-name">Primary</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                  </div>
-                </div>
-                <div>
-                  <div class="uk-card uk-card-hover uk-card-secondary uk-card-body">
-                    <h3 class="uk-card-title team-name">Secondary</h3>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    </p>
-                  </div>
-                </div>
+                <div class="blog-slider__pagination"></div>
               </div>
             </div>
           </div>
