--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Xenith 2022</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
+
   <link rel="stylesheet" href="css/uikit.min.css" />
   <!-- UIkit CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.9.4/dist/css/uikit.min.css" />
@@ -20,7 +20,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css" />
- 
+
 
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -155,11 +155,10 @@
                         alt="Gifts">
                     </div>
                     <div class="blog-slider__content">
-                      <div class="blog-slider__title">Buy Christmas gifts
+                      <div class="blog-slider__title">Lorem ipsum dolor sit amet consectetur
                       </div>
                       <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         Recusandae voluptate repellendus magni illo ea animi? </div>
-                      <a href="#" class="blog-slider__button">SHOP</a>
                     </div>
                   </div>
                   <div class="blog-slider__item swiper-slide">
@@ -169,7 +168,19 @@
                         alt="Xmas tree">
                     </div>
                     <div class="blog-slider__content">
-                      <div class="blog-slider__title">Enjoy Christmas with your children</div>
+                      <div class="blog-slider__title">Lorem ipsum dolor sit amet consectetur</div>
+                      <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Recusandae voluptate repellendus magni illo ea animi?</div>
+                    </div>
+                  </div>
+                  <div class="blog-slider__item swiper-slide">
+                    <div class="blog-slider__img">
+                      <img
+                        src="https://images.pexels.com/photos/6141236/pexels-photo-6141236.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                        alt="Xmas tree">
+                    </div>
+                    <div class="blog-slider__content">
+                      <div class="blog-slider__title">Lorem ipsum dolor sit amet consectetur</div>
                       <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         Recusandae voluptate repellendus magni illo ea animi?</div>
                       <a href="#" class="blog-slider__button">READ MORE</a>
@@ -183,7 +194,7 @@
                         alt="Xmas firework">
                     </div>
                     <div class="blog-slider__content">
-                      <div class="blog-slider__title">Don't forget the fireworks</div>
+                      <div class="blog-slider__title">Lorem ipsum dolor sit amet consectetur</div>
                       <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         Recusandae voluptate repellendus magni illo ea animi?</div>
                     </div>
@@ -562,40 +573,37 @@
 
       <div class="footer-left">
 
-        <h3>Company<span>logo</span></h3>
+        <p class="footer-company-name"><img src="src/post/ieee-white.png" style="width:70%;margin-top: -10px;"></p>
+        <br><br>
 
-        <p class="footer-links">
-          <a href="#" class="link-1">Home</a>
 
-          <a href="#">Blog</a>
 
-          <a href="#">Pricing</a>
-
-          <a href="#">About</a>
-
-          <a href="#">Faq</a>
-
-          <a href="#">Contact</a>
-        </p>
-
-        <p class="footer-company-name">Company Name © 2015</p>
       </div>
 
       <div class="footer-center">
 
         <div>
-          <i class="fa fa-map-marker"></i>
-          <p><span>444 S. Cedros Ave</span> Solana Beach, California</p>
+          <div class="btn ig-btn" style="float: left;;">
+            <i class="fa fa-map-marker" aria-hidden="true" id="ig"></i>
+          </div>
+          <p style="display:flex">Xenith 2022 <br>
+            Jaypee Institute Of Information Technology<br>
+            Sector-62, Noida <br>
+            India </p>
         </div>
 
-        <div>
-          <i class="fa fa-phone"></i>
-          <p>+1.555.555.5555</p>
+        <div class="name">
+          <div class="btn ph-btn" style="float: left;;">
+            <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
+          </div>
+          <p style="text-align: left;">Shwetank : +91 7011528526</p>
         </div>
 
-        <div>
-          <i class="fa fa-envelope"></i>
-          <p><a href="mailto:support@company.com">support@company.com</a></p>
+        <div class="name">
+          <div class="btn ph-btn" style="float: left;;">
+            <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
+          </div>
+          <p>Priyanjali : +91 7011528526</p>
         </div>
 
       </div>
@@ -610,22 +618,55 @@
 
         <div class="footer-icons">
 
-          <a href="#"><i class="fa fa-facebook"></i></a>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-          <a href="#"><i class="fa fa-linkedin"></i></a>
-          <a href="#"><i class="fa fa-github"></i></a>
+          <div class="container">
+            <div class="btn fb-btn">
+              <i class="fa fa-facebook" aria-hidden="true" id="fb"></i>
+            </div>
+            <div class="btn ig-btn">
+              <i class="fa fa-instagram" aria-hidden="true" id="ig"></i>
+            </div>
+            <div class="btn ln-btn">
+              <i class="fa fa-linkedin" aria-hidden="true" id="ln"></i>
+            </div>
+            <div class="btn gt-btn">
+              <i class="fa fa-github" aria-hidden="true" id="gt"></i>
+            </div>
+            <div class="btn yt-btn">
+              <i class="fa fa-youtube-play" aria-hidden="true" id="yt"></i>
+            </div>
+
+          </div>
+
 
         </div>
 
       </div>
+      <div class="footer-bottom">
+        <p class="footer-links " style="text-align: center;">
+          <a href="#" class="link-1">Home</a>
+
+          <a href="#">About</a>
+
+          <a href="#">Events</a>
+
+          <a href="#">Timeline</a>
+
+          <a href="#">Team</a>
+
+          <a href="#">Sponser</a>
+
+          <a href="#">Contact</a>
+
+        </p>
+      </div>
 
 
     </footer>
-    
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="js/main.js"></script>
-    
+
     <!--/footer-->
 
   </div>
