--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
 
       <div class="footer-center">
 
-        <div>
+        <div class="name">
           <div class="btn ig-btn" style="float: left;;">
             <i class="fa fa-map-marker" aria-hidden="true" id="ig"></i>
           </div>
@@ -596,14 +596,14 @@
           <div class="btn ph-btn" style="float: left;;">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
-          <p style="text-align: left;">Shwetank : +91 7011528526</p>
+          <p style="display:flex">Shwetank : +91 7011528526</p>
         </div>
 
         <div class="name">
           <div class="btn ph-btn" style="float: left;;">
             <i class="fa fa-phone" aria-hidden="true" id="ph"></i>
           </div>
-          <p>Priyanjali : +91 7011528526</p>
+          <p style="display:flex">Priyanjali : +91 7011528526</p>
         </div>
 
       </div>
