--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
           <div class="btn ig-btn" style="float: left;;">
             <i class="fa fa-map-marker" aria-hidden="true" id="ig"></i>
           </div>
-          <p style="display:flex">Xenith 2022 <br>
+          <p style="display:flex; text-align: left;">Xenith 2022 <br>
             Jaypee Institute Of Information Technology<br>
             Sector-62, Noida <br>
             India </p>
