--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
 
     <div class="uk-position-relative" id="timeline" uk-scrollspy="cls:uk-animation-fade">
       <div class="uk-section">
-        <div class="uk-container">
+        <div class="uk-container time">
           <div class="uk-position-top-center">
             <div class="uk-tile uk-tile-transparent">
               <h1 class="sectionHead glitch final" data-text="Timeline">Timeline</h1>
             </div>
           </div>  
-          <section class="timeline">
+          <div class="timeline">
             <ul>
               <li>
                 <div>
@@ -283,7 +283,7 @@
                 </div>
               </li>
             </ul>
-          </section>
+          </div>
         </div>
       </div>
     </div>
